--- a/index/paineladmin.html
+++ b/index/paineladmin.html
@@ -20,7 +20,7 @@
                         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="criarenquete.html">Criar Enquete</a></li>
                         <li class="nav-item"><a class="nav-link" href="resultados.html">Resultados</a></li>
-                        <li class="nav-item"><a class="nav-link" href="paineladmin.html">Painel Admin</a></li>
+                        <li class="nav-item"><a class="nav-link" href="adminPanel.html">Painel Admin</a></li>
                         <li class="nav-item"><a class="nav-link" href="graficos.html">Gráficos</a></li>
                     </ul>
                 </div>
