--- a/index/cadastro.html
+++ b/index/cadastro.html
@@ -1,55 +1,106 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Usuário</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="criarenquete.html">Criar Enquete</a></li>
-                        <li class="nav-item"><a class="nav-link" href="resultados.html">Resultados</a></li>
-                        <li class="nav-item"><a class="nav-link" href="paineladmin.html">Painel Admin</a></li>
-                        <li class="nav-item"><a class="nav-link" href="graficos.html">Gráficos</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <section id="cadastro" class="container mt-5">
-        <h2>Cadastro de Usuário</h2>
-        <form>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registro - Votex Enquetes</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../CSS/style.css" />
+  </head>
+  <body>
+    <div class="container mt-5">
+      <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+          <h2 class="text-center">Criar Conta</h2>
+        </div>
+        <div class="card-body">
+          <form id="registerForm">
             <div class="mb-3">
-                <label for="username" class="form-label">Nome de Usuário:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+              <label for="username" class="form-label">Nome de Usuário</label>
+              <input type="text" class="form-control" id="username" required />
             </div>
-
             <div class="mb-3">
-                <label for="email" class="form-label">E-mail:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+              <label for="email" class="form-label">E-mail</label>
+              <input type="email" class="form-control" id="email" required />
             </div>
-
             <div class="mb-3">
-                <label for="password" class="form-label">Senha:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+              <label for="password" class="form-label">Senha</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                required
+              />
             </div>
+            <div class="mb-3">
+              <label for="confirmPassword" class="form-label"
+                >Confirmar Senha</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="confirmPassword"
+                required
+              />
+            </div>
+            <div
+              id="errorMessage"
+              class="alert alert-danger"
+              style="display: none"
+            ></div>
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-primary">Registrar</button>
+              <a href="login.html" class="btn btn-outline-secondary"
+                >Já tem conta? Faça login</a
+              >
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
-        </form>
-    </section>
+    <script>
+      document
+        .getElementById("registerForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+          const username = document.getElementById("username").value;
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
+          const confirmPassword =
+            document.getElementById("confirmPassword").value;
+          const errorMessage = document.getElementById("errorMessage");
+
+          if (password !== confirmPassword) {
+            errorMessage.textContent = "As senhas não coincidem";
+            errorMessage.style.display = "block";
+            return;
+          }
+
+          try {
+            const response = await fetch("/api/auth/register", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ username, email, password }),
+            });
+
+            if (!response.ok) {
+              const error = await response.json();
+              throw new Error(error.message || "Erro ao registrar");
+            }
+
+            window.location.href = "login.html";
+          } catch (error) {
+            errorMessage.textContent = error.message;
+            errorMessage.style.display = "block";
+          }
+        });
+    </script>
+  </body>
 </html>
