--- a/index/index.html
+++ b/index/index.html
@@ -19,9 +19,6 @@
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -52,44 +49,45 @@
     </header>
 
     <main>
-      <section class="container mt-5">
-        <h2>Login</h2>
-        <form action="#" method="post">
-          <div class="mb-3">
-            <label for="email" class="form-label">E-mail</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              required
-            />
-          </div>
+      <section class="texto-home">
+        <h2>Bem-vindo ao Sistema de Enquetes</h2>
+        <p>
+          Este é um sistema simples para a criação, votação e gestão de
+          enquetes. Use os links acima para navegar pelas diferentes
+          funcionalidades do sistema.
+        </p>
 
-          <div class="mb-3">
-            <label for="senha" class="form-label">Senha</label>
-            <input
-              type="password"
-              class="form-control"
-              id="senha"
-              name="senha"
-              required
-            />
-          </div>
+        <h3>O que você pode fazer aqui:</h3>
+        <ul>
+          <li>
+            <strong>Cadastrar-se</strong> para criar enquetes ou votar em
+            enquetes existentes.
+          </li>
+          <li>
+            <strong>Fazer login</strong> para acessar sua conta e ver enquetes
+            que criou.
+          </li>
+          <li>
+            <strong>Criar novas enquetes</strong> para perguntar algo para os
+            usuários.
+          </li>
+          <li><strong>Votar</strong> nas enquetes disponíveis.</li>
+          <li>
+            <strong>Ver resultados</strong> de enquetes que já foram
+            finalizadas.
+          </li>
+          <li>
+            <strong>Acessar o painel de administração</strong> para gerenciar
+            enquetes.
+          </li>
+        </ul>
 
-          <button type="submit" class="btn btn-primary">Entrar</button>
-        </form>
-
-        <div class="mt-3">
-          <p>
-            Ainda não tem uma conta?
-            <a href="cadastro.html" class="btn btn-link">Cadastre-se</a>
-          </p>
-        </div>
+        <h3>Iniciar Agora</h3>
+        <p>Escolha uma das opções acima para começar!</p>
       </section>
     </main>
 
-    <footer class="text-center mt-5">
+    <footer>
       <p>&copy; 2024 Seu Projeto de Enquetes</p>
     </footer>
 
